# gitlab-language-server

./: Cargo.toml  README.md
.github/workflows/: ci.yml  release.yml
src/: lsp.rs  main.rs
