[package]
name = "gitlab-language-server"
version = "0.0.1"
edition = "2021"

[lints.clippy]
expect_used = "warn"
unwrap_used = "warn"
todo = "warn"

[dependencies]
futures = "0.3"
reqwest = { version = "0.11.11", features = ["json"] }
serde = { version = "1", features = ["serde_derive"] }
serde_json = { version = "1" }
tokio = { version = "1", features = [
    "rt",
    "rt-multi-thread",
    "io-std",
    "macros",
] }
tower-lsp = { version = "0.20", features = ["runtime-tokio"] }

[dev-dependencies]
insta = "1.39.0"
textwrap = "0.16.1"
